# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: flask-and-linter-tests.yml
page_analyzer/: __init__.py  app.py  db.py
page_analyzer/templates/: base.html  home.html  index.html  show_url.html  urls.html
